5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1582_579.log
== TEST (2019-03-19 15:59:38) 
-- CODE:
print("A UFAM tem, 2016 - 1909, "anos de fundacao.")
-- ERROR:
File "XXXX", line 1
    print("A UFAM tem, 2016 - 1909, "anos de fundacao.")
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:59:40) 
-- CODE:
print("A UFAM tem, 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.135014
-- ERROR:
  File "/home/codebench/codes/1582/579/main.py", line 1
    print("A UFAM tem, 2016 - 1909, "anos de fundacao.")
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:00:03) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- OUTPUT:
A UFAM tem 107 anos de fundacao.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:00:05) 
-- CODE:
print("A UFAM tem", 2016 - 1909, "anos de fundacao.")
-- EXECUTION TIME:
0.166319
-- TEST CASE 1:
---- input:
xxx
---- correct output:
A UFAM tem 107 anos de fundacao.
---- user output:
A UFAM tem 107 anos de fundacao.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
